--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,12 +13,8 @@ body {
 margin: 5vh;
 }
 
-  header {
-      /* display: grid;
-      margin-top:2em;
-      width: 50vw;
-      align-items: center;
-      justify-content: center; */
+main:hover {
+  box-shadow: 0 0 11px rgba(33,33,33,.2); 
 }
 
 /* h3{
