--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,13 +5,24 @@
 }
 
 body {
-  width: 90vw;
-  display: flex;
+  display: grid;
   justify-content: center;
 }
 
+main {
+  width: 90%;
+  align-items: center;
+background-color: grey;
+}
+
 .layout {
+
+    justify-content: center;
+  /* width: 90%; */
   margin: 5vh;
+  height: auto;
+  background-color: rgb(90, 4, 4);
+
 }
 
 main:hover {
